styles/global.css
:root {
  --pitchfork-orange: #ff3530;
}

@font-face {
  font-family: "Tiempos";
  src: url("/tiempos-regular.otf");
  font-style: normal;
  font-weight: 400;
  font-display: swap;
}

.sr-only,
.end-mark,
.review-detail__featured-tracks {
  display: none;
}

.review-detail__abstract {
  @apply text-lg md:text-[26px] mt-12 md:mt-20 mb-10 text-gray-200 md:leading-10 max-w-[55ch];
}

.product-name,
body {
  font-family: Walfork, Walsheim, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.setting-header {
  font-family: Walfork, helvetica, sans-serif;
}

.contents p {
  @apply leading-8 md:leading-8 md:text-lg my-8;
}

.contents hr {
  @apply border-gray-500;
}

.contents {
  @apply leading-8;
  font-family: Tiempos, monospace, Georgia, serif;
}

.body__inner-container,
.contents {
  display: block;
}

.body__inner-container p {
  @apply my-6 text-lg;
}

.body__inner-container > p:first-child:first-letter,
.contents > p:first-child:first-letter {
  float: left;
  font-size: 6.2em;
  line-height: 1em;
  margin: -0em 0.15em -0.13em 0;
}

.review-blurb {
  @apply text-2xl my-10;
}

.contents a {
  @apply border-b-2;
  border-color: var(--pitchfork-orange);
}

.bestNew {
  @apply overflow-hidden;
}

.bestNew::before {
  content: "";
  position: absolute;
  z-index: 15;
  width: 6rem;
  height: 3em;
  background: #fff;
  transform: rotate(45deg);
  border: 1px solid transparent;
  border-bottom-color: #eee;
  top: -1rem;
  right: -31px;
}

.bestNew::after {
  content: "";
  display: block;
  background: url(/best-new-badge.svg) no-repeat 100% 0;
  background-size: 3rem 3rem;
  line-height: 1;
  width: 4rem;
  height: 4rem;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 20;
}

.loader-animation .circle {
  stroke-dasharray: 311.0085;
  stroke-dashoffset: 933.0255;
  -webkit-animation: circle 2s ease forwards infinite;
  animation: circle 2s ease forwards infinite;
}

.loader-animation .center-line {
  stroke-dasharray: 160;
  stroke-dashoffset: 480;
  -webkit-animation: line 2s linear forwards infinite;
  animation: line 2s linear forwards infinite;
}

.loader-animation path {
  stroke: #1e1e1e;
  stroke-width: 2;
  fill: none;
  stroke-linecap: round;
}

.loader-animation .short-line {
  stroke-dasharray: 114;
  stroke-dashoffset: 342;
  -webkit-animation: short-line 2s linear forwards infinite;
  animation: short-line 2s linear forwards infinite;
}

.loader-animation .arrow-head {
  stroke-dasharray: 27;
  stroke-dashoffset: 81;
  -webkit-animation: arrowhead 2s linear forwards infinite;
  animation: arrowhead 2s linear forwards infinite;
}

.loader-animation .shape {
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 100px 100px;
  transform-origin: 100px 100px;
}

@keyframes short-line {
  30% {
    stroke-dashoffset: 228;
  }

  50% {
    stroke-dashoffset: 228;
  }
  70% {
    stroke-dashoffset: 114;
  }
  100% {
    stroke-dashoffset: 114;
  }
}

@keyframes line {
  30% {
    stroke-dashoffset: 320;
  }
  50% {
    stroke-dashoffset: 320;
  }
  70% {
    stroke-dashoffset: 160;
  }
  100% {
    stroke-dashoffset: 160;
  }
}

@keyframes circle {
  50% {
    stroke-dashoffset: 622.017;
  }
  100% {
    stroke-dashoffset: 311.0085;
  }
}

@keyframes arrowhead {
  30% {
    stroke-dashoffset: 81;
  }

  50% {
    stroke-dashoffset: 54;
  }
  70% {
    stroke-dashoffset: 54;
  }
  100% {
    stroke-dashoffset: 27;
  }
}

.collapsible[data-state="open"] {
  animation: open-collapsible 250ms ease-out;
}

.collapsible[data-state="closed"] {
  animation: close-collapsible 250ms ease-out;
}

@keyframes open-collapsible {
  from {
    height: 0;
  }

  to {
    height: var(--radix-collapsible-content-height);
  }
}

@keyframes close-collapsible {
  from {
    height: var(--radix-collapsible-content-height);
  }

  to {
    height: 0;
  }
}

